* CHANGE remove latex, emtex, eepic, and tpic terminals from default build
* CHANGE pm3d quadrangles are by default clipped smoothly to zrange
* FIX allow mixed use of in-key plot titles and manually placed titles
* FIX open/close path for polygons
* FIX several stability issues of the caca terminal
* FIX gd terminals: rendering of white lines with lw > 1

New features introduced to 5.2 in patchlevel releases
=====================================================
* NEW "set grid {no}vertical" adds grid lines in the xz and xz planes
* NEW "set cntrparam {firstlinetype N} {{un}sorted}"
* NEW set table separator {tab|comma|"char"} allows creation of csv files
* NEW hotkey for changing azimuth in 3D plots with mousing
* NEW splot ... with lines title at {beg|end}
* NEW Rework gstrptime() to handle relative time formats tH tM tS
* NEW command "set rgbmax <value>" controls interpretation of input RGB values
* NEW allow array size to be determined automatically from initializer
* NEW "set pm3d noclipcb" will skip drawing quadrangles whose color is < cbmin
* NEW imaginary component of array values is available to "using" in column 3
* NEW "exit status <val>" exits program with user-provided status

New features, changes and fixes in gnuplot version 5.2 (initial release)
========================================================================
* NEW plot styles
* NEW    splot ... using <x>:<y>:<z>:<zlow>:<zhigh> with zerrorfill
* NEW    "set jitter" allows creation of bee swarm plots
* NEW    data filter "bins" sorts input into equal width bins on x
* NEW    "with points" and "with linespoints" accept `pointtype variable`
* NEW    hidden3d now treats 'image' and 'rgbimage' as occluding rectangles
* NEW    "smooth fnormal" normalized frequency
* NEW polar mode improvements and extensions
* NEW    "set [m]ttics" places labels around perimeter of polar grid
* NEW    "set rlabel" places a label above the r axis